--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -30,7 +30,7 @@
                     ※メアドはパスワード再設定に必要だから、登録をしてほしいな！！！
                 </p>
 
-                <input type="submit" value="Sign up">
+                <input type="submit" value="サインアップ">
             </form>
 
 
